# novel-downloader-image-to-text-mapping

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: validate-mappings.yml
filename-mappings/: www.xiguashuwu.com.json  www.xiguashuwu.com.min.json
hash-mappings/: www.xiguashuwu.com.json  www.xiguashuwu.com.min.json
scripts/: __init__.py  __main__.py  main.py
scripts/config/: domain_configs.py
scripts/models/: validation_result.py
scripts/processors/: image_downloader.py  image_hasher.py  sync_processor.py
scripts/utils/: change_tracker.py  file_utils.py  logger.py
scripts/validators/: duplicate_remover.py  hash_validator.py  json_validator.py  minifier.py  sorter.py
